[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Main/GameServer.gd" type="Script" id=1]
[ext_resource path="res://Scenes/World/WorldMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Main/PlayerVerification.gd" type="Script" id=3]

[node name="GameServer" type="Node"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="PlayerVerification" type="Node" parent="."]
script = ExtResource( 3 )

[node name="VerificationExpiration" type="Timer" parent="PlayerVerification"]
wait_time = 10.0
autostart = true

[node name="TokenExpiration" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="WorldMap" parent="." instance=ExtResource( 2 )]

[connection signal="timeout" from="PlayerVerification/VerificationExpiration" to="PlayerVerification" method="_on_VerificationExpiration_timeout"]
[connection signal="timeout" from="TokenExpiration" to="." method="_on_TokenExpiration_timeout"]
